# Triangele

./: .gitignore  CMakeLists.txt  main.cpp
